@@ -2474,10 +2474,10 @@ static int try_db_section (char *orig_name, char *path, struct mandata *in)
 	}
 #endif /* MAN_DB_UPDATES */
 
-	if (in->id == WHATIS_MAN || in->id == WHATIS_CAT)
-		error (OK, 0,
-		       _("warning: %s: relying on whatis refs is deprecated"),
-		       name);
+	if (debug && (in->id == WHATIS_MAN || in->id == WHATIS_CAT))
+		fprintf (stderr,
+			 _("%s: relying on whatis refs is deprecated\n"),
+			 name);
 
 #ifndef NROFF_MISSING /* #ifdef NROFF */
 	/*
