@@ -1,3 +1,8 @@
+Thu Jun 28 22:52:04 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (try_db_section): Downgrade whatis refs warning to a
+	  debugging message, as it's rather noisy for a stable release.
+
 Thu Jun 28 22:38:41 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (gripe_rwopen_failed): New function.
